<resources>
    <string name="app_name">WorkChain</string>
    <string name="login">Bejelentkezés</string>
    <string name="signUp">Regisztráció</string>
    <string name="workchain">WorkChain</string>
    <string name="emailAddress">Email cím</string>
    <string name="name">Név</string>
    <string name="password">Jelszó</string>
    <string name="rePassword">Jelszó újra</string>
    <string name="back">Vissza</string>
    <string name="logo">logo</string>
    <string name="newProject">Új projekt létrehozása</string>
    <string name="projects">Projektek</string>
    <string name="profile">Profilom</string>
    <string name="logout">Kijelentkezés</string>
    <string name="projectName">Projekt neve</string>
    <string name="description">Leírás</string>
    <string name="create">Létrehozás</string>
    <string name="home">Kezdőoldal</string>
    <string name="newTask">Új feladat létrehozása</string>
    <string name="open">Megnyitás</string>
    <string name="createTask">Új feladat</string>
    <string name="dueDate">Határidő: éééé-hh-nn</string>
    <string name="low">Alacsony</string>
    <string name="medium">Közepes</string>
    <string name="high">Magas</string>
    <string name="priority">Prioritás</string>
    <string name="delete">Törlés</string>
    <string name="edit">Szerkesztés</string>
    <string name="save">Mentés</string>
    <string name="openCamera">Profilkép készítése</string>
    <string name="uploadPhoto">Profilkép választása</string>
</resources>